--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
+    "gulp-jade": "^1.1.0",
     "jquery": "^3.1.0",
-    "laravel-elixir": "^6.0.0-14",
+    "laravel-elixir": "*",
+    "laravel-elixir-jade": "https://registry.npmjs.org/laravel-elixir-jade/-/laravel-elixir-jade-0.2.4.tgz",
+    "laravel-elixir-pug": "^1.3.2",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
+    "pug": "^2.0.0-beta6",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3"
+  },
+  "dependencies": {
+    "laravel-elixir-pug": "^1.3.2",
+    "pug": "^2.0.0-beta6"
   }
 }
